--- a/sp.html
+++ b/sp.html
@@ -9,7 +9,7 @@
     </style>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <!-- <link rel="stylesheet" href="https://cdn.tailwindcss.com/3.0.12"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arnav | Portfolio</title>
@@ -60,6 +60,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 <!-- <script src="https://cdn.tailwindcss.com/3.0.12"></script>
 <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js"></script> -->
-<script src="js/script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
